# UsbAPI

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md  link.cmake
include/: Descriptor.hpp  Device.hpp  Session.hpp  UsbLinkTransportDriver.hpp  usb_link_transport_driver.h
lusb/: CMakeLists.txt  sources.cmake
src/: CMakeLists.txt  Descriptor.cpp  Device.cpp  Session.cpp  UsbLinkTransportDriver.cpp  UsbLinkTransportDriver.hpp  usb_link_transport_driver.cpp
tests/: CMakeLists.txt
tests/src/: UnitTest.hpp
